# vt-ws2223-hw

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: scenarios.rs
interpreter/src/: isa.rs  lib.rs  program.rs  state.rs
src/: interpreter.rs  main.rs
src/interpreter/: instruction_cycle.rs  state.rs
